fix: Hide overflowing ripple effect in list items

--- a/src/style/application.scss
+++ b/src/style/application.scss
@@ -1,5 +1,9 @@
 @import "settings";
 
+:focus {
+  outline: none;
+}
+
 .application-root {
   position: absolute;
   top:0;
